--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
         <!-- END MENU TOP -->
     </div>
     <!-- END NAVIGATION TOP -->
-
-    <div class="container">
-        <div class="column" id="column-1">
-            <ul class="photo-list" id="photo-list-1">
-                <li class="photo"></li>
-            </ul>
-        </div>
-        <div class="column" id="column-2">
-            <ul class="photo-list" id="photo-list-2">
-                <li class="photo"></li>
-            </ul>
-        </div>
-        <div class="column" id="column-3">
-            <ul class="photo-list" id="photo-list-3">
-                <li class="photo"></li>
-            </ul>
-        </div>
-        <div class="column" id="column-0">
-            <ul class="photo-list" id="photo-list-0">
-                <li class="photo"></li>
-            </ul>
+    <div class="page-wrap">
+        <div class="container">
+            <div class="column" id="column-1">
+                <ul class="photo-list" id="photo-list-1">
+                    <li class="photo"></li>
+                </ul>
+            </div>
+            <div class="column" id="column-2">
+                <ul class="photo-list" id="photo-list-2">
+                    <li class="photo"></li>
+                </ul>
+            </div>
+            <div class="column" id="column-3">
+                <ul class="photo-list" id="photo-list-3">
+                    <li class="photo"></li>
+                </ul>
+            </div>
+            <div class="column" id="column-0">
+                <ul class="photo-list" id="photo-list-0">
+                    <li class="photo"></li>
+                </ul>
+            </div>
         </div>
     </div>
-
 </body>
 <script type="text/javascript" src="js/jquery-1.7.1.js"></script>
 <script type="text/javascript" src="index.js"></script>
